Sun Jul  9 02:24:00 2006  Tim Janik  <timj@gtk.org>

	* zintern/gus-patch.bse: 
	* bse/zintern/wave-mono.bse: updated to beast 0.7.0, clarified license.

Fri Jul  7 02:17:02 2006  Tim Janik  <timj@gtk.org>

	* gslcommon.c:
	* bsepcmdevice-oss.c:
	* bsemididevice-oss.c: use birnet_file_equals() and
	birnet_file_check().

Thu Jul  6 22:45:17 2006  Tim Janik  <timj@gtk.org>

	* zintern/Makefile.am: use birnet-zintern.

	* zintern/zintern.c: rmeoved.

Wed Jun 21 23:37:41 2006  Tim Janik  <timj@gtk.org>

	* bsestorage.c: type fixup.

Wed Jun 14 15:44:27 2006  Stefan Westerfeld <stefan@space.twc.de>

	* bseitem.h(bse_item_undo_open): Added G_GNUC_PRINTF printf format
	attribute.

Mon Jun 12 01:09:51 2006  Tim Janik  <timj@gtk.org>

	* bsecxxutils.hh: got rid of TEMPLATE_ERROR::* which is provided
	by Birnet now.
	
	* bsecxxarg.hh: use Birnet::TEMPLATE_ERROR::invalid_type().

Mon Jun  5 13:59:52 2006  Tim Janik  <timj@gtk.org>

	* bsecxxutils.hh: removed binary lookup templates which are 
	in Birnet now.

Wed May 31 03:04:03 2006  Tim Janik  <timj@gtk.org>

	* bseproject.c bse_project_restore(): force dirty project flag 
	after restoring/merging.

	* gslfft.h: fixed documentation.

	* tests/testfft.c: added resynthesis tests.

Wed May 31 00:39:24 2006  Tim Janik  <timj@gtk.org>

	* bseengine.c (bse_trans_merge): docu fixups.

Sat May 27 00:22:44 2006  Tim Janik  <timj@gtk.org>

	* gslfft.h: document that gsl_power2_fftsr() scales the output data
	by 1.0/n_values.

Sun May 21 12:19:52 2006  Tim Janik  <timj@gtk.org>

	* bsesuper.c (super_compat_setup): added compat code for "license" and 
	"author" fields, loaded from BSE files < 0.7.0.

Sat May 20 15:49:07 2006  Tim Janik  <timj@gtk.org>

	* bse.h:
	* bsemain.[hc]: merged config data from gsl into BSE config data. make 
	use of BirnetInitValue to allow non-argc/argv configuraiton upon initilaization.
	removed bse_init_intern(). added bse_init_inprocess() and bse_init_test().
	adapted dependent code.
